k8s/installations/traefik-dashboard-ingress-route.yml
# manifest file for traefik dashboard ingress route
# traefik-dashboard-ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-ingressroute
  namespace: traefik
spec:
  entryPoints:
    - traefik
  routes:
    - kind: Rule
      match: Host(`traefik.superfast-delivery.yashraj-jaiswal.site`)
      middlewares:
        - name: dashboard-redirectscheme
          namespace: traefik
        - name: dashboard-basic-auth
          namespace: traefik
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: traefik.superfast-delivery.yashraj-jaiswal.site
